infra/k8s/eventbus-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventbus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventbus
  template:
    metadata:
      labels:
        app: eventbus
    spec:
      containers:
        - name: eventbus-srv
          image: therealsohail/eventbus-srv:latest
          # imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: eventbus-service
spec:
  selector:
    app: eventbus
  type: ClusterIP
  ports:
    - name: eventbus
      protocol: TCP
      port: 8005
      targetPort: 8005
