infra/k8s/nodeport-eventbus.yml
apiVersion: v1
kind: Service
metadata:
  name: eventbus-service-nodeport
spec:
  selector:
    app: eventbus
  type: NodePort
  ports:
    - name: eventbus
      protocol: TCP
      port: 8005
      targetPort: 8005
