infra/k8s/post-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post
  template:
    metadata:
      labels:
        app: post
    spec:
      containers:
        - name: post-srv
          image: therealsohail/post-srv
---
apiVersion: v1
kind: Service
metadata:
  name: post-service
spec:
  selector:
    app: post
  type: ClusterIP
  ports:
    - name: post
      protocol: TCP
      port: 8000
      targetPort: 8000
